# apps/hub/internal/server/http.go
@@ -23,7 +23,7 @@ func NewHTTPRouter(cfg *config.Config, logger *slog.Logger) (*chi.Mux, error) {
 	}
 
 	router := chi.NewRouter()
-	router.Use(rest.RequestID)
+	router.Use(rest.FlowID)
 	router.Use(resolveClientIP)
 	router.Use(accessLog(logger))
 	router.Use(recoverer(logger))
